--- a/hstream/requirements.txt
+++ b/hstream/requirements.txt
@@ -1,7 +1,62 @@
-fastapi~=0.85
-uvicorn~=0.19
-watchfiles~=0.18
-Jinja2~=3.1
-Markdown~=3.4
-yattag~=1.14
-starlette_context==0.3.4
+anyio==3.6.2
+arel==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.0.0
+build==0.10.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+contourpy==1.0.7
+cycler==0.11.0
+docutils==0.19
+fastapi==0.95.1
+fonttools==4.39.3
+h11==0.14.0
+hstream==0.0.15
+httptools==0.5.0
+idna==3.4
+importlib-metadata==6.6.0
+jaraco.classes==3.2.3
+Jinja2==3.1.2
+keyring==23.13.1
+kiwisolver==1.4.4
+Markdown==3.4.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+mdurl==0.1.2
+more-itertools==9.1.0
+numpy==1.24.3
+packaging==23.1
+Pillow==9.5.0
+pkginfo==1.9.6
+pydantic==1.10.7
+Pygments==2.15.1
+pyparsing==3.0.9
+pyproject_hooks==1.0.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-multipart==0.0.6
+PyYAML==6.0
+readme-renderer==37.3
+requests==2.30.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.3.5
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4.1
+starlette==0.26.1
+starlette-context==0.3.4
+tomli==2.0.1
+twine==4.0.2
+typing_extensions==4.5.0
+urllib3==2.0.2
+uvicorn==0.22.0
+uvloop==0.17.0
+watchfiles==0.19.0
+watchgod==0.6
+webencodings==0.5.1
+websockets==11.0.3
+yattag==1.15.1
+zipp==3.15.0
