--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = ""
 authors = ["Conrad <conradbez1@gmail.com>"]
 readme = "README.md"
 
+[tool.poetry.scripts]
+hstream = "hstream.cli:cli"
+
 [tool.poetry.dependencies]
 python = "^3.10"
 CherryPy = "^18.9.0"
