--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ black = "^24.4.2"
 ipykernel = "^6.29.4"
 pandas = "^2.2.2"
 ipdb = "^0.13.13"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
