--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,13 +14,13 @@ repos:
     - id: ruff
       args: [ --fix ]
     # Run the formatter.
-    - id: ruff-format
+    # - id: ruff-format
 
 -   repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
     -   id: black
-# - repo: https://github.com/pycqa/isort
-#     rev: 5.12.0
-#     hooks:
-#     - id: isort
+-   repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+    - id: isort
