--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pandas = "^2.2.2"
 ipdb = "^0.13.13"
 isort = "^5.13.2"
 pre-commit = "^3.7.1"
+ruff = "^0.4.4"
 
 [build-system]
 requires = ["poetry-core"]
