--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ ipdb = "^0.13.13"
 isort = "^5.13.2"
 pre-commit = "^3.7.1"
 ruff = "^0.4.4"
+pytest = "^8.2.0"
+python-dotenv = "^1.0.1"
+playwright = "^1.43.0"
 
 [build-system]
 requires = ["poetry-core"]
