fix: poetry pytest gh actions

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install dependencies with Poetry
       run: |
-        poetry install --no-root --with dev
+        poetry install --with dev
 
     - name: Install pre-commit
       run: |
