--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ ruff = "^0.4.4"
 pytest = "^8.2.0"
 python-dotenv = "^1.0.1"
 playwright = "^1.43.0"
+pytest-rerunfailures = "^14.0"
 
 [build-system]
 requires = ["poetry-core"]
