--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,11 +41,13 @@ jobs:
         poetry run pytest --reruns 3 # githubs playwright sometimes fails
 
     - name: Build package
+      if: github.ref == 'refs/heads/main'
       run: |
         python -m pip install --upgrade build
         python -m build
 
     - name: Publish package to PyPI
+      if: github.ref == 'refs/heads/main'
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
