--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,36 @@
-[tool.poetry]
+[project]
 name = "hstream"
 version = "0.1.57"
 description = ""
-authors = ["Conrad <conradbez1@gmail.com>"]
+authors = [{ name = "Conrad", email = "conradbez1@gmail.com" }]
 readme = "README.md"
+requires-python = ">=3.10"
+dependencies = [
+    "click>=8.1.7",
+    "yattag>=1.15.2",
+    "markdown>=3.6",
+    "beautifulsoup4>=4.12",
+    "django>=5.0.6",
+]
 
-[tool.poetry.scripts]
+[project.scripts]
 hstream = "hstream.cli:cli"
 
-[tool.poetry.dependencies]
-python = "^3.10"
-click = "^8.1.7"
-yattag = "^1.15.2"
-markdown = "^3.6"
-beautifulsoup4 = "^4.12"
-django = "^5.0.6"
-
-[tool.poetry.group.dev.dependencies]
-black = "^24.4.2"
-ipykernel = "^6.29.4"
-pandas = "^2.2.2"
-ipdb = "^0.13.13"
-isort = "^5.13.2"
-pre-commit = "^3.7.1"
-ruff = "^0.4.4"
-pytest = "^8.2.0"
-python-dotenv = "^1.0.1"
-playwright = "^1.43.0"
-pytest-rerunfailures = "^14.0"
+[tool.uv]
+dev-dependencies = [
+    "black>=24.4.2",
+    "ipykernel>=6.29.4",
+    "pandas>=2.2.2",
+    "ipdb>=0.13.13",
+    "isort>=5.13.2",
+    "pre-commit>=3.7.1",
+    "ruff>=0.4.4",
+    "pytest>=8.2.0",
+    "python-dotenv>=1.0.1",
+    "playwright>=1.43.0",
+    "pytest-rerunfailures>=14.0",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
